Feat: ajout du tracker store

--- a/config.yml
+++ b/config.yml
@@ -9,3 +9,8 @@ policies:
   - name: MemoizationPolicy
   - name: KerasPolicy
   - name: MappingPolicy
+  - name: FallbackPolicy
+    nlu_threshold: 0.7
+    ambiguity_threshold: 0.1
+    core_threshold: 0.7
+    fallback_action_name: 'utter_out_of_scope_0'
