--- a/endpoints.example.yml
+++ b/endpoints.example.yml
@@ -25,12 +25,14 @@
 #    password: <password used for authentication>
 #    use_ssl: <whether or not the communication is encrypted, default false>
 
-#tracker_store:
-#    type: mongod
-#    url: <url to your mongo instance, e.g. mongodb://localhost:27017>
-#    db: <name of the db within your mongo instance, e.g. rasa>
-#    username: <username used for authentication>
-#    password: <password used for authentication>
+tracker_store:
+  type: sql
+  dialect: "postgresql"
+  url: "localhost"
+  port: "5432"
+  username: "postgres"
+  password: "postgres"
+  db: "db_name"
 
 # Event broker which all conversation events should be streamed to.
 # https://rasa.com/docs/rasa/api/event-brokers/
