Fix: update db user :bug:

--- a/endpoints.example.yml
+++ b/endpoints.example.yml
@@ -30,7 +30,7 @@ tracker_store:
   dialect: "postgresql"
   url: "localhost"
   port: "5432"
-  username: "postgres"
+  username: "rasa_user"
   password: "postgres"
   db: "rasa"
 
