--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: 'fr'
+language: fr
 pipeline:
   - name: 'WhitespaceTokenizer'
   - name: 'RegexFeaturizer'
@@ -12,20 +12,16 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: 'DIETClassifier'
-    hidden_layers_sizes:
-      text: [256, 128]
-    number_of_transformer_layers: 0
-    weight_sparsity: 0
-    intent_classification: True
-    entity_recognition: False
-    use_masked_language_model: False
-    BILOU_flag: False
+    epochs: 100
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: AugmentedMemoizationPolicy
     max_history: 1
+  - name: TEDPolicy
+    max_history: 5
+    epochs: 100
   - name: FallbackPolicy
     nlu_threshold: 0.6
     core_threshold: 0.5
