--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@ language: fr
 pipeline:
   - name: WhitespaceTokenizer
   - name: RegexFeaturizer
+    case_sensitive: False
   - name: CountVectorsFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: 'char_wb'
@@ -12,13 +13,21 @@ pipeline:
   - name: DIETClassifier
     entity_recognition: false
     epochs: 10
+  - name: FallbackClassifier
+    threshold: 0.6
+    ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: MemoizationPolicy
     max_history: 1
-  - name: FallbackPolicy
-    nlu_threshold: 0.6
-    core_threshold: 0.5
-    fallback_action_name: 'utter_phrase_hors_sujet_0'
+  - name: RulePolicy
+    core_fallback_threshold: 0.5
+    core_fallback_action_name: "utter_phrase_hors_sujet_0"
+
+rules:
+  - rule: Response out of scope
+    steps:
+      - intent: nlu_fallback
+      - action: utter_phrase_hors_sujet_0
