Feat: bug in rasa alpha :sparkles:

--- a/config.yml
+++ b/config.yml
@@ -23,8 +23,12 @@ policies:
   - name: MemoizationPolicy
     max_history: 1
   - name: RulePolicy
-    core_fallback_threshold: 0.5
-    core_fallback_action_name: "utter_phrase_hors_sujet_0"
+#    core_fallback_threshold: 0.5
+#    core_fallback_action_name: "utter_phrase_hors_sujet_0"
+  - name: FallbackPolicy
+    nlu_threshold: 0.6
+    core_threshold: 0.5
+    fallback_action_name: 'utter_phrase_hors_sujet_0'
 
 rules:
   - rule: Response out of scope
