Feat: test nlu configs :sparkles:

--- a/config_test_7.yml
+++ b/config_test_7.yml
@@ -10,11 +10,8 @@ pipeline:
     analyzer: 'char_wb'
     min_ngram: 1
     max_ngram: 4
-  - name: DIETClassifier
-    entity_recognition: false
-    epochs: 20
-  - name: ResponseSelector
-    epochs: 100
+  - name: KeywordIntentClassifier
+    case_sensitive: False
 #  - name: FallbackClassifier
 #    threshold: 0.6
 #    ambiguity_threshold: 0.1
@@ -24,9 +21,9 @@ pipeline:
 policies:
   - name: MemoizationPolicy
     max_history: 1
-#  - name: RulePolicy
-#    core_fallback_threshold: 0.5
-#    core_fallback_action_name: "utter_phrase_hors_sujet_0"
+  #  - name: RulePolicy
+  #    core_fallback_threshold: 0.5
+  #    core_fallback_action_name: "utter_phrase_hors_sujet_0"
   - name: FallbackPolicy
     nlu_threshold: 0.6
     core_threshold: 0.5
