--- a/config.yml
+++ b/config.yml
@@ -11,17 +11,18 @@ pipeline:
     max_ngram: 4
   - name: DIETClassifier
     entity_recognition: false
-    epochs: 20
+    epochs: 100
+  - name: FallbackClassifier
+    threshold: 0.4
+    ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: MemoizationPolicy
-    max_history: 1
   - name: TEDPolicy
-    max_history: 1
-    epochs: 1
-  - name: FallbackPolicy
-    nlu_threshold: 0.8
-    core_threshold: 0.6
-    fallback_action_name: 'action_ask_piaf'
+    max_history: 5
+    epochs: 100
+    batch_size: 50
+    max_training_samples: 300
+  - name: RulePolicy
