--- a/tests/test_full_piaf_agent.yml
+++ b/tests/test_full_piaf_agent.yml
@@ -2,10 +2,10 @@ stories:
 - story: Full flow with bad question (no good response)
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -17,18 +17,16 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
   - action: action_ask_piaf
-  - slot_was_set:
-    - ask_piaf_1_finish: true
   - action: utter_rephrase_piaf_2
   - user: |
       Poulet
@@ -45,27 +43,27 @@ stories:
   - user: |
       /ask_agent
     intent: ask_agent
-  - action: utter_greet
+  - action: utter_goodbye_service_public
 
 - story: Full flow with bad question (no good response) & Chitchat
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
   - action: utter_ask_question
   - user: |
-      how are you
-    intent: greet
-  - action: utter_greet
+      /st_age
+    intent: st_age
+  - action: utter_st_age
   - user: |
-      thanks
-    intent: thankyou
-  - action: utter_youarewelcome
+      /st_goodbye
+    intent: st_goodbye
+  - action: utter_st_goodbye
   - user: |
       Poulet
     intent: nlu_fallback
@@ -73,27 +71,25 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
   - action: action_ask_piaf
-  - slot_was_set:
-    - ask_piaf_1_finish: true
   - action: utter_rephrase_piaf_2
   - user: |
-      how are you
-    intent: greet
-  - action: utter_greet
+      /st_age
+    intent: st_age
+  - action: utter_st_age
   - user: |
-      thanks
-    intent: thankyou
-  - action: utter_youarewelcome
+      /st_goodbye
+    intent: st_goodbye
+  - action: utter_st_goodbye
   - user: |
       Poulet
     intent: nlu_fallback
@@ -109,4 +105,4 @@ stories:
   - user: |
       /ask_agent
     intent: ask_agent
-  - action: utter_greet
+  - action: utter_goodbye_service_public
