--- a/tests/test_full_piaf_no_agent.yml
+++ b/tests/test_full_piaf_no_agent.yml
@@ -2,10 +2,10 @@ stories:
 - story: Full flow with bad question (no good response) - no satisfaction - no agent
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -17,18 +17,16 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
   - action: action_ask_piaf
-  - slot_was_set:
-    - ask_piaf_1_finish: true
   - action: utter_rephrase_piaf_2
   - user: |
       Poulet
@@ -50,10 +48,10 @@ stories:
 - story: Full flow with bad question (no good response) - satisfaction - no agent
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -65,18 +63,16 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
   - action: action_ask_piaf
-  - slot_was_set:
-    - ask_piaf_1_finish: true
   - action: utter_rephrase_piaf_2
   - user: |
       Poulet
@@ -94,3 +90,4 @@ stories:
       /no_other_question
     intent: no_other_question
   - action: utter_goodbye_service_public
+  - action: action_restart
