--- a/tests/test_piaf_one_ok_agent.yml
+++ b/tests/test_piaf_one_ok_agent.yml
@@ -2,10 +2,10 @@ stories:
 - story: Full flow with PIAF 1 ok (on theme), go to agent (no good response)
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -17,7 +17,6 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
     - ask_piaf_1_ok: true
-    - ask_piaf_1_finish: true
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -30,19 +29,19 @@ stories:
   - slot_was_set:
     - ask_piaf_2: true
   - action: utter_rephrase_piaf_3
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
-  - action: action_send_sub_directories
+  - action: action_send_tree
   - user: |
       /choose_sub_directory{"sub_directory":"Déroulement de carrière"}
     intent: choose_sub_directory
-  - action: action_send_cards
+  - action: action_send_tree
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -51,15 +50,15 @@ stories:
   - user: |
       /ask_agent
     intent: ask_agent
-  - action: utter_greet
+  - action: utter_goodbye_service_public
 
 - story: Full flow with PIAF 1 ok (on sub theme), go to agent (no good response)
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -71,14 +70,13 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1_ok: true
-    - ask_piaf_1_finish: true
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -91,15 +89,15 @@ stories:
   - slot_was_set:
     - ask_piaf_2: true
   - action: utter_rephrase_piaf_3
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
-  - action: action_send_sub_directories
+  - action: action_send_tree
   - user: |
       /choose_sub_directory{"sub_directory":"Déroulement de carrière"}
     intent: choose_sub_directory
-  - action: action_send_cards
+  - action: action_send_tree
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -108,15 +106,15 @@ stories:
   - user: |
       /ask_agent
     intent: ask_agent
-  - action: utter_greet
+  - action: utter_goodbye_service_public
 
 - story: Full flow with PIAF 1 ok (on directory), go to agent (no good response)
   steps:
   - user: |
-     start
-    intent: get_started
+      /phrase_presentation
+    intent: phrase_presentation
   - action: utter_get_started
-  - action: action_send_themes
+  - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
@@ -128,19 +126,18 @@ stories:
   - slot_was_set:
     - ask_piaf_1: true
   - action: utter_rephrase_piaf_1
-  - action: action_send_sub_themes
+  - action: action_send_tree
   - user: |
       /choose_sub_theme{"sub_theme":"Contrats et carrière"}
     intent: choose_sub_theme
   - action: action_ask_piaf
-  - action: action_send_directories
+  - action: action_send_tree
   - user: |
       /choose_directory{"directory":"N505"}
     intent: choose_directory
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1_ok: true
-    - ask_piaf_1_finish: true
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -153,11 +150,11 @@ stories:
   - slot_was_set:
     - ask_piaf_2: true
   - action: utter_rephrase_piaf_3
-  - action: action_send_sub_directories
+  - action: action_send_tree
   - user: |
       /choose_sub_directory{"sub_directory":"Déroulement de carrière"}
     intent: choose_sub_directory
-  - action: action_send_cards
+  - action: action_send_tree
   - action: utter_satisfaction
   - user: |
       /satisfaction_deny
@@ -166,4 +163,4 @@ stories:
   - user: |
       /ask_agent
     intent: ask_agent
-  - action: utter_greet
+  - action: utter_goodbye_service_public
