--- a/tests/test_full_piaf_no_agent.yml
+++ b/tests/test_full_piaf_no_agent.yml
@@ -4,15 +4,18 @@ stories:
   - user: |
       /phrase_presentation
     intent: phrase_presentation
+  - action: utter_deactivate_text
   - action: utter_get_started
   - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
   - action: utter_ask_question
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1: true
@@ -28,9 +31,11 @@ stories:
     intent: choose_directory
   - action: action_ask_piaf
   - action: utter_rephrase_piaf_2
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_2: true
@@ -50,15 +55,18 @@ stories:
   - user: |
       /phrase_presentation
     intent: phrase_presentation
+  - action: utter_deactivate_text
   - action: utter_get_started
   - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
   - action: utter_ask_question
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1: true
@@ -74,9 +82,11 @@ stories:
     intent: choose_directory
   - action: action_ask_piaf
   - action: utter_rephrase_piaf_2
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_2: true
