--- a/tests/test_full_piaf_agent.yml
+++ b/tests/test_full_piaf_agent.yml
@@ -4,15 +4,18 @@ stories:
   - user: |
       /phrase_presentation
     intent: phrase_presentation
+  - action: utter_deactivate_text
   - action: utter_get_started
   - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
   - action: utter_ask_question
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1: true
@@ -28,9 +31,11 @@ stories:
     intent: choose_directory
   - action: action_ask_piaf
   - action: utter_rephrase_piaf_2
+  - action: utter_activate_text
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_activate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_2: true
@@ -50,12 +55,14 @@ stories:
   - user: |
       /phrase_presentation
     intent: phrase_presentation
+  - action: utter_deactivate_text
   - action: utter_get_started
   - action: action_send_tree
   - user: |
       /choose_theme{"theme":"N19806"}
     intent: choose_theme
   - action: utter_ask_question
+  - action: utter_activate_text
   - user: |
       /st_age
     intent: st_age
@@ -67,6 +74,7 @@ stories:
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_1: true
@@ -82,6 +90,7 @@ stories:
     intent: choose_directory
   - action: action_ask_piaf
   - action: utter_rephrase_piaf_2
+  - action: utter_activate_text
   - user: |
       /st_age
     intent: st_age
@@ -93,6 +102,7 @@ stories:
   - user: |
       Poulet
     intent: nlu_fallback
+  - action: utter_deactivate_text
   - action: action_ask_piaf
   - slot_was_set:
     - ask_piaf_2: true
