Fix: bug stories :bug:

--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,12 +1,17 @@
 version: "2.0"
 stories:
   # PIAF 1
-  - story: get_started, PIAF 1
+  - story: phrase_presentation
     steps:
-      - checkpoint: check_get_started
       - intent: phrase_presentation
       - action: utter_deactivate_text
       - action: utter_get_started
+      - checkpoint: check_get_started
+
+  - story: get_started, PIAF 1
+    steps:
+      - checkpoint: check_get_started
+      - action: utter_deactivate_text
       - action: utter_get_started_2
       - action: action_send_tree
       - intent: choose_theme
